Aggiunto il fragment accreditamentoValidate

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -103,6 +103,7 @@ label.comune=Comune
 label.comunicazioni=Comunicazioni
 label.conferma=Conferma
 label.conferma_password=Conferma Password
+label.conferma_valutazione=Conferma Valutazione
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
@@ -196,6 +197,7 @@ label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_piano_formativo=Inserisci Piano Formativo
+label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
@@ -244,6 +246,7 @@ label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
 label.non_inserito=non inserito
 label.non_valido=Non valido
+label.non_valutato=non valutato
 label.not_enabled=Disabilitato
 label.note=Note
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
@@ -334,6 +337,7 @@ label.sostituisci=Sostituisci
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
+label.stato_valutazione=Stato Valutazione
 label.status=Status
 label.straniera=Straniera
 label.sì=Sì
@@ -355,6 +359,9 @@ label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.validazione=Validazione
 label.valido=Valido
+label.valuta=Valuta
+label.valuta_domanda=Valuta Domanda
+label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
 label.valutazioni_precedenti=Valutazioni precedenti
@@ -365,6 +372,7 @@ label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
+label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
