--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -401,3 +401,6 @@ message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.prendi_in_carica=Prendi in Carica
+label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
+label.menu_azioni=Menù Azioni
