--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -188,6 +188,7 @@ label.incarico_presso_la_struttura=Incarico presso la struttura
 label.indietro=Indietro
 label.indirizzo=Indirizzo
 label.info_account=Accedi all'area riservata
+label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del Provider
