--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -220,7 +220,6 @@ label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
-label.modifica=Modifica
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
@@ -404,3 +403,4 @@ message.warning=Attenzione
 label.prendi_in_carica=Prendi in Carica
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
 label.menu_azioni=Menù Azioni
+label.visualizzazione=Visualizzazione
