--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,7 @@ engineering.engineering=Engineering
 engineering.test_firma=Test Firma
 engineering.test_mypay=Test MyPay
 error.almenouno.empty=almeno uno dei campi è obbligatorio
+error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
@@ -25,6 +26,7 @@ error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
 error.min=valore troppo corto
 error.name.duplicated=nome già registrato
+error.note_obbligatorie=In caso di valutazione negativa è necessario compilare le note
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
@@ -72,6 +74,7 @@ label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
 label.assegna=Assegna
+label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
@@ -216,6 +219,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.locked=Bloccato
 label.lookup=Cerca
+label.menu_azioni=Menù Azioni
 label.messaggi=Messaggi
 label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
@@ -274,6 +278,7 @@ label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
+label.prendi_in_carica=Prendi in Carica
 label.prezzo=Prezzo
 label.privata=Privata
 label.procedura_formativa=Procedura formativa
@@ -373,6 +378,7 @@ label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
+label.visualizzazione=Visualizzazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
@@ -400,8 +406,5 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
+message.valutazione_salvata=Valutazione e note salvate con successo!
 message.warning=Attenzione
-label.prendi_in_carica=Prendi in Carica
-label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
-label.menu_azioni=Menù Azioni
-label.visualizzazione=Visualizzazione
