--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -229,7 +229,9 @@ label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.mostra=Mostra
 label.mostra_riepilogo=Mostra riepilogo
+label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
