--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -406,6 +406,7 @@ message.legale_non_piu_modificabile=Registrando un responsabile non sarà più p
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
 message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
+message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
