--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -253,7 +253,7 @@ label.nome=Nome
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
 label.non_inserito=non inserito
-label.non_valido=Non valido
+label.non_valido=non valido
 label.non_valutato=non valutato
 label.not_enabled=Disabilitato
 label.note=Note
@@ -368,12 +368,13 @@ label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.validazione=Validazione
-label.valido=Valido
+label.valido=valido
 label.valuta=Valuta
 label.valuta_domanda=Valuta Domanda
 label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
+label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_precedenti=Valutazioni precedenti
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_evento=Visualizzazione dell''evento {0}
@@ -415,3 +416,4 @@ message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.warning=Attenzione
+label.tutte_le_valutazioni=Mostra tutte le Valutazioni
