--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -232,7 +232,8 @@ label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
 label.mostra=Mostra
-label.mostra_riepilogo=Mostra riepilogo
+label.mostra_riepilogo=Mostra riepilogo domanda
+label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
 label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
@@ -319,6 +320,7 @@ label.richiesta_accreditamento=Richiesta di accreditamento
 label.richieste_accreditamento=Richieste di accreditamento
 label.ricordami=Ricordami
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
+label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
 label.risposta_del_provider=Risposta del Provider
@@ -362,6 +364,7 @@ label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.tutte="Tutte"
+label.tutte_le_valutazioni=Mostra tutte le Valutazioni
 label.username=Username
 label.utente=Utente
 label.utenti=Utenti
@@ -416,4 +419,3 @@ message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.warning=Attenzione
-label.tutte_le_valutazioni=Mostra tutte le Valutazioni
