--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -234,6 +234,7 @@ label.modifica_utente=Modifica Utente
 label.mostra=Mostra
 label.mostra_riepilogo=Mostra riepilogo domanda
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
+label.mostra_valutazione=Mostra valutazione
 label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
