Aggiunto pulsante apri tutte/chiudi tutte in showAll + label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -74,6 +74,7 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
+label.apri_tutte=Apri tutte
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
 label.attoCostitutivo=Atto Costitutivo e statuto
@@ -96,6 +97,7 @@ label.cerca_persona=Cerca persona
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
+label.chiudi_tutte=Chiudi tutte
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
