Eliminato richiedente in registrazione e aggiunta email a provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -139,6 +139,7 @@ label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del legale
 label.dati_non_inseriti= (dati non inseriti)
+label.dati_struttura=Dati della Struttura
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
