--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -211,7 +211,7 @@ label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
-label.is_coordinatore=Inserisci come Coordinatore del Comitato Scierntifico
+label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.istruzioni_psw=La password deve essere composta da minimo 8 e massimo 12 caratteri, deve inoltre contenere almeno un numero e una lettera
 label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
@@ -312,6 +312,7 @@ label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
 label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
+label.required_fatturato_personale_sanitario=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato del personale sanitario nella sezione Dati Accreditamento)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
 label.responsabile=Responsabile
 label.responsabile_amministrativo=Responsabile Amministrativo
