Finito giro completo modifiche richieste, descrizione:
-ordinate le valutazioni per data (asc)
-sistemata la UI di valutazione quando non si può modificare
-valutazione complessiva obbligatoria
-rimosso richiedente
-aggiustato allegato delegato
-aggiustato flag partita iva
-sistemate vaschette referee
-sistemati permessi referee
-sistemata UI referee in valutazione
-aggiunte label
-inserito link al manuale
-aggiunta visualizzazione table valutazioni complessive
-sistemato counter vaschetta valutazione
-altri piccoli fix

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -53,6 +53,7 @@ label.abilitato=Abilitato
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
+label.accreditamenti_lista_gruppo=Lista Domande di accreditamento da {0}
 label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
@@ -99,6 +100,7 @@ label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
 label.chiudi_tutte=Chiudi tutte
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
+label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -126,6 +128,7 @@ label.da_pagare=Da pagare
 label.da_valutare=Da valutare
 label.dashboard_admin=Admin dashboard
 label.dashboard_provider=Provider dashboard
+label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
@@ -187,6 +190,7 @@ label.gruppo=Gruppo
 label.gruppo_appartenenza=Gruppo di appartenenza
 label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
+label.help=Help
 label.home=Torna alla Home
 label.home_page=Benvenuto in ECM - Regione Veneto
 label.id=Id
@@ -205,9 +209,10 @@ label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_piano_formativo=Inserisci Piano Formativo
-label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento (opzionale)
+label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
 label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
+label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
@@ -239,6 +244,7 @@ label.mostra=Mostra
 label.mostra_riepilogo=Mostra riepilogo domanda
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
 label.mostra_valutazione=Mostra valutazione
+label.mostra_valutazioni_complessive=Mostra valutazioni complessive
 label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
@@ -308,6 +314,7 @@ label.pubblica=Pubblica
 label.ragione_sociale=Ragione sociale
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.recupera_password=Recupera password
+label.referee=Referee
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
@@ -327,6 +334,7 @@ label.richieste_accreditamento=Richieste di accreditamento
 label.ricordami=Ricordami
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
+label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
 label.risposta_del_provider=Risposta del Provider
@@ -380,9 +388,11 @@ label.validazione=Validazione
 label.valido=valido
 label.valuta=Valuta
 label.valuta_domanda=Valuta Domanda
+label.valutare=valutare
 label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
+label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_precedenti=Valutazioni precedenti
 label.visualizza_altri=Visualizza tutte le valutazioni
