Bugfix vari pre rilascio 25/08/2016

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -96,6 +96,7 @@ label.caratteri_rimanenti=caratteri rimanenti
 label.cellulare=Cellulare
 label.cerca_persona=Cerca persona
 label.cf=CF
+label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
 label.chiudi_tutte=Chiudi tutte
