Corretti bug rilevati durante il giro prima della demo valutazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -436,3 +436,5 @@ message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.warning=Attenzione
+label.attenzione=Attenzione!
+label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
