--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,3 +1,4 @@
+
 ######## LABEL ########
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 Email=email non valida
@@ -78,6 +79,7 @@ label.annulla=Annulla
 label.apri_tutte=Apri tutte
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
+label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
@@ -96,7 +98,6 @@ label.caratteri_rimanenti=caratteri rimanenti
 label.cellulare=Cellulare
 label.cerca_persona=Cerca persona
 label.cf=CF
-label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
 label.chiudi_tutte=Chiudi tutte
@@ -111,6 +112,7 @@ label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.comune=Comune
 label.comunicazioni=Comunicazioni
 label.conferma=Conferma
+label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
 label.contributo_annuale=Contributo Annuale
@@ -141,7 +143,6 @@ label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
-label.dati_legale=Dati del legale
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
 label.delega=Delega
@@ -150,6 +151,7 @@ label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
+label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
 label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
@@ -223,6 +225,7 @@ label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
+label.dati_legale_login=Dati del\nLegale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
 label.lista_allegati=Lista degli allegati del provider {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
@@ -293,6 +296,7 @@ label.permessi=Permessi
 label.persone=Persone
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
+label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.prendi_in_carica=Prendi in Carica
@@ -421,6 +425,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.evento_salvato=L'evento è stato salvato con successo.
+message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
@@ -436,5 +441,3 @@ message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.warning=Attenzione
-label.attenzione=Attenzione!
-label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
