Flusso Assegnamento/ValutazioneSegreteria WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -79,6 +79,8 @@ label.annulla=Annulla
 label.apri_tutte=Apri tutte
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
+label.assegna_nuovo_gruppo_referee=Assegna la valutazione della Domanda di Accreditamento ad un nuovo gruppo di Referee
+label.assegna_stesso_gruppo=Fai valutare Integrazione
 label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
@@ -143,6 +145,7 @@ label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
+label.dati_legale_login=Dati del\nLegale Rappresentante
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
 label.delega=Delega
@@ -225,7 +228,6 @@ label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
-label.dati_legale_login=Dati del\nLegale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
 label.lista_allegati=Lista degli allegati del provider {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
@@ -425,6 +427,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.evento_salvato=L'evento è stato salvato con successo.
+message.gruppoCrecm_riassegnato=Domanda riassegnata ad un nuovo gruppo di Referee con successo!
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
