aggiunte label necessarie

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -302,6 +302,7 @@ label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il 
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.prendi_in_carica=Prendi in Carica
+label.presa_visione=Presa visione
 label.prezzo=Prezzo
 label.privata=Privata
 label.procedura_formativa=Procedura formativa
@@ -443,4 +444,5 @@ message.utente_creato=Il nuovo utente è stato correttamente registrato ed è st
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
+message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
 message.warning=Attenzione
