--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -79,7 +79,6 @@ label.annulla=Annulla
 label.apri_tutte=Apri tutte
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
-label.assegna_nuovo_gruppo_referee=Assegna la valutazione della Domanda di Accreditamento ad un nuovo gruppo di Referee
 label.assegna_stesso_gruppo=Fai valutare Integrazione
 label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
@@ -428,7 +427,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.evento_salvato=L'evento è stato salvato con successo.
-message.gruppoCrecm_riassegnato=Domanda riassegnata ad un nuovo gruppo di Referee con successo!
+message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
@@ -446,3 +445,6 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
 message.warning=Attenzione
+label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
+label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
+error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
