--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,6 +36,7 @@ error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devon
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.numero_referee=Selezionare esattamente 3 referee
+error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -233,6 +234,7 @@ label.lista_anni_selezionabili=Lista degli anni selezionabili
 label.lista_domande_da_valutare=Domande da valutare
 label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
+label.lista_referee=Lista dei Referee
 label.locked=Bloccato
 label.lookup=Cerca
 label.menu_azioni=Menù Azioni
@@ -269,6 +271,8 @@ label.no_profit=Società no-profit
 label.nome=Nome
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
+label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
+label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
 label.non_valido=non valido
 label.non_valutato=non valutato
@@ -335,6 +339,7 @@ label.responsabile_qualita=Responsabile della Qualità
 label.responsabile_segreteria=Responsabile di Segreteria
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
+label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.richiesta_accreditamento=Richiesta Accreditamento
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richieste_accreditamento=Richieste di accreditamento
@@ -362,6 +367,7 @@ label.seleziona_anagrafica=Seleziona anagrafica esistente
 label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
 label.seleziona_referee=Seleziona 3 Referee per la valutazione dell'Accreditamento
+label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
 label.settoriale=Settoriale
 label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
@@ -401,6 +407,7 @@ label.valutatore=Valutatore
 label.valutazione=Valutazione
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
+label.valutazioni_non_date=Valutazione non date (consecutivamente)
 label.valutazioni_precedenti=Valutazioni precedenti
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_evento=Visualizzazione dell''evento {0}
@@ -445,6 +452,3 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
 message.warning=Attenzione
-label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
-label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
-error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
