--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -452,3 +452,49 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
 message.warning=Attenzione
+label.lista_sedute=Gestione Sedute
+label.nessuna_seduta=Non sono state trovate Sedute nel database!
+label.inserisci_nuova_seduta=Nuova Seduta
+label.seduta=Seduta Ordine del Giorno
+month.gennaio=Gennaio
+month.febbraio=Febbraio
+month.marzo=Marzo
+month.aprile=Aprile
+month.maggio=Maggio
+month.giugno=Giugno
+month.luglio=Luglio
+month.agosto=Agosto
+month.settembre=Settembre
+month.ottobre=Ottobre
+month.novembre=Novembre
+month.dicembre=Dicembre
+dayshort.lunedi=Lun
+dayshort.martedi=Mar
+dayshort.mercoledi=Mer
+dayshort.giovedi=Gio
+dayshort.venerdi=Ven
+dayshort.sabato=Sab
+dayshort.domenica=Dom
+label.oggi=oggi
+label.settimana=settimana
+label.mese=mese
+label.giorno=giorno
+message.seduta_salvata=La Seduta è stata salvata con successo.
+message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
+label.data=Data
+label.ora=Ora
+label.trova=Trova
+label.sedute_inserite=Sedute inserite
+label.inserimento_seduta=Inserimento nuova Seduta
+label.modifica_seduta=Modifica della Seduta del {0}
+label.visualizzazione_seduta=Visualizzazione dati della Seduta
+message.seduta_eliminata=Seduta eliminata.
+error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
+error.ora_non_valida=Ora non valida! La Seduta non può essere inserita in un orario già passato.
+label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
+label.nessuna_valutazione_commissione=Nessuna domanda inserita
+label.domanda_id=ID Domanda
+label.oggetto_discussione=Motivazione
+label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
+label.applica=Applica
+message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
