--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,6 +6,13 @@ NotEmpty=campo obbligatorio
 NotNull=campo obbligatorio
 app.title=ECM - Regione Veneto
 app.title_short=ECM
+dayshort.domenica=Dom
+dayshort.giovedi=Gio
+dayshort.lunedi=Lun
+dayshort.martedi=Mar
+dayshort.mercoledi=Mer
+dayshort.sabato=Sab
+dayshort.venerdi=Ven
 engineering.dati_inseriti=File inseriti con successo
 engineering.engineering=Engineering
 engineering.test_firma=Test Firma
@@ -16,6 +23,7 @@ error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sist
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
+error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
@@ -37,6 +45,7 @@ error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifi
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
+error.ora_non_valida=Ora non valida! La Seduta non può essere inserita in un orario già passato.
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -67,6 +76,7 @@ label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
+label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.allegati=Allegati
 label.allegato=Allegato
@@ -77,6 +87,7 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
+label.applica=Applica
 label.apri_tutte=Apri tutte
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
@@ -135,6 +146,7 @@ label.dashboard_admin=Admin dashboard
 label.dashboard_provider=Provider dashboard
 label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
+label.data=Data
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
@@ -162,7 +174,10 @@ label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
+label.domanda_accreditamento=Domanda di Accreditamento
+label.domanda_id=ID Domanda
 label.domande_accreditamento=Domande di Accreditamento
+label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
 label.elimina=Elimina
 label.email=E-mail
 label.enabled=Abilitato
@@ -189,9 +204,12 @@ label.file_nome=File
 label.firma_digitalmente=Firma digitalmente
 label.funzionigramma=Funzionigramma
 label.generale=Generale
+label.gestione_domande=Gestione Domande
+label.gestione_domande_seduta=Gestione delle Domande di Accreditamento della Seduta del {0}
 label.gestione_password=Gestione Password
 label.gestione_profili=Gestione Profili
 label.gestione_utenti=Gestione Utenti
+label.giorno=giorno
 label.gruppo=Gruppo
 label.gruppo_appartenenza=Gruppo di appartenenza
 label.ha_partita_IVA=Sei titolare di Partita IVA?
@@ -212,8 +230,11 @@ label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
+label.inserimento_seduta=Inserimento nuova Seduta
+label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
+label.inserisci_nuova_seduta=Nuova Seduta
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
 label.inserito=inserito
@@ -235,9 +256,11 @@ label.lista_domande_da_valutare=Domande da valutare
 label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
+label.lista_sedute=Gestione Sedute
 label.locked=Bloccato
 label.lookup=Cerca
 label.menu_azioni=Menù Azioni
+label.mese=mese
 label.messaggi=Messaggi
 label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
@@ -246,6 +269,7 @@ label.modifica=Modifica
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
+label.modifica_seduta=Modifica della Seduta del {0}
 label.modifica_utente=Modifica Utente
 label.mostra=Mostra
 label.mostra_riepilogo=Mostra riepilogo domanda
@@ -265,7 +289,10 @@ label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
+label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
+label.nessuna_seduta=Non sono state trovate Sedute nel database!
+label.nessuna_valutazione_commissione=Nessuna domanda inserita
 label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
@@ -289,7 +316,11 @@ label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
 label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
+label.oggetto_discussione=Motivazione
+label.oggi=oggi
 label.ok=ok
+label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
+label.ora=Ora
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.pagato=Pagato
@@ -360,6 +391,8 @@ label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
 label.sedi=Sedi
+label.seduta=Seduta Ordine del Giorno
+label.sedute_inserite=Sedute inserite
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
@@ -368,11 +401,13 @@ label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
 label.seleziona_referee=Seleziona 3 Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
+label.settimana=settimana
 label.settoriale=Settoriale
 label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
 label.sostituisci=Sostituisci
+label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
@@ -390,6 +425,7 @@ label.tipologia_evento=Tipologia dell'evento
 label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
 label.torna_in_visualizzazione=Torna in visualizzazione
+label.trova=Trova
 label.tutte="Tutte"
 label.tutte_le_valutazioni=Mostra tutte le Valutazioni
 label.username=Username
@@ -419,6 +455,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
+label.visualizzazione_seduta=Visualizzazione dati della Seduta
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
@@ -428,13 +465,17 @@ message.completato=Operazione effettuata!
 message.componente_comitato_eliminato=Componente del Comitato Scientifico eliminato
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
+message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
+message.domanda_rimossa=Domanda di Accreditamento rimossa dalla Seduta con successo.
 message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
+message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.evento_salvato=L'evento è stato salvato con successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
+message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
@@ -446,55 +487,23 @@ message.presa_in_carico=La Domanda di Accreditamento è stata correttamente pres
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
+message.seduta_eliminata=Seduta eliminata.
+message.seduta_salvata=La Seduta è stata salvata con successo.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
 message.warning=Attenzione
-label.lista_sedute=Gestione Sedute
-label.nessuna_seduta=Non sono state trovate Sedute nel database!
-label.inserisci_nuova_seduta=Nuova Seduta
-label.seduta=Seduta Ordine del Giorno
-month.gennaio=Gennaio
-month.febbraio=Febbraio
-month.marzo=Marzo
+month.agosto=Agosto
 month.aprile=Aprile
-month.maggio=Maggio
+month.dicembre=Dicembre
+month.febbraio=Febbraio
+month.gennaio=Gennaio
 month.giugno=Giugno
 month.luglio=Luglio
-month.agosto=Agosto
-month.settembre=Settembre
-month.ottobre=Ottobre
+month.maggio=Maggio
+month.marzo=Marzo
 month.novembre=Novembre
-month.dicembre=Dicembre
-dayshort.lunedi=Lun
-dayshort.martedi=Mar
-dayshort.mercoledi=Mer
-dayshort.giovedi=Gio
-dayshort.venerdi=Ven
-dayshort.sabato=Sab
-dayshort.domenica=Dom
-label.oggi=oggi
-label.settimana=settimana
-label.mese=mese
-label.giorno=giorno
-message.seduta_salvata=La Seduta è stata salvata con successo.
-message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
-label.data=Data
-label.ora=Ora
-label.trova=Trova
-label.sedute_inserite=Sedute inserite
-label.inserimento_seduta=Inserimento nuova Seduta
-label.modifica_seduta=Modifica della Seduta del {0}
-label.visualizzazione_seduta=Visualizzazione dati della Seduta
-message.seduta_eliminata=Seduta eliminata.
-error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
-error.ora_non_valida=Ora non valida! La Seduta non può essere inserita in un orario già passato.
-label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
-label.nessuna_valutazione_commissione=Nessuna domanda inserita
-label.domanda_id=ID Domanda
-label.oggetto_discussione=Motivazione
-label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
-label.applica=Applica
-message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
+month.ottobre=Ottobre
+month.settembre=Settembre
