inserite label spostamento seduta

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -320,6 +320,7 @@ label.oggetto_discussione=Motivazione
 label.oggi=oggi
 label.ok=ok
 label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
+label.opzione_selezione_seduta=Seduta {0} del {1} - ore: {2}
 label.ora=Ora
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
@@ -392,10 +393,12 @@ label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
 label.sedi=Sedi
 label.seduta=Seduta Ordine del Giorno
+label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
 label.sedute_inserite=Sedute inserite
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
+label.seleziona_altro_ODG=Seleziona l'Ordine Del Giorno nel quale spostare la domanda di Accreditamento selezionata
 label.seleziona_anagrafica=Seleziona anagrafica esistente
 label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
@@ -468,6 +471,7 @@ message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti
 message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.domanda_rimossa=Domanda di Accreditamento rimossa dalla Seduta con successo.
+message.domanda_spostata=Domanda di Accreditamento spostata dalla Seduta con successo.
 message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
