Aggiunte label e modificati css

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,3 @@
-
 ######## LABEL ########
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 Email=email non valida
@@ -45,7 +44,8 @@ error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifi
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
-error.ora_non_valida=Ora non valida! La Seduta non può essere inserita in un orario già passato.
+error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
+error.ora_non_valida2=Ora non valida! La Seduta non può essere inserita in un orario comprendente i prossimi 30 minuti.
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -74,6 +74,7 @@ label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
 label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
+label.accreditato=Accreditato
 label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
@@ -171,6 +172,7 @@ label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
 label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
+label.diniego=Diniego
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
@@ -204,7 +206,7 @@ label.file_nome=File
 label.firma_digitalmente=Firma digitalmente
 label.funzionigramma=Funzionigramma
 label.generale=Generale
-label.gestione_domande=Gestione Domande
+label.gestione_domande=Ordine del Giorno
 label.gestione_domande_seduta=Gestione delle Domande di Accreditamento della Seduta del {0}
 label.gestione_password=Gestione Password
 label.gestione_profili=Gestione Profili
@@ -231,11 +233,13 @@ label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserimento_seduta=Inserimento nuova Seduta
+label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_nuova_seduta=Nuova Seduta
 label.inserisci_piano_formativo=Inserisci Piano Formativo
+label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
 label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
@@ -292,6 +296,7 @@ label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accredit
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
 label.nessuna_seduta=Non sono state trovate Sedute nel database!
+label.nessuna_seduta_selezionabile=Nessuna Seduta selezionabile
 label.nessuna_valutazione_commissione=Nessuna domanda inserita
 label.no=No
 label.no_profit=Società no-profit
@@ -320,7 +325,7 @@ label.oggetto_discussione=Motivazione
 label.oggi=oggi
 label.ok=ok
 label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
-label.opzione_selezione_seduta=Seduta {0} del {1} - ore: {2}
+label.opzione_selezione_seduta=Seduta del {0} - ore: {1}
 label.ora=Ora
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
@@ -374,6 +379,7 @@ label.responsabili=Responsabili
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.richiesta_accreditamento=Richiesta Accreditamento
 label.richiesta_accreditamento=Richiesta di accreditamento
+label.richiesta_integrazione=Richiesta di Integrazione
 label.richieste_accreditamento=Richieste di accreditamento
 label.ricordami=Ricordami
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
@@ -413,6 +419,9 @@ label.sostituisci=Sostituisci
 label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
+label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
+label.stato_domanda=Stato Domanda
+label.esito_valutazione=Esito Valutazione
 label.stato_inserimento=Stato Inserimento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
@@ -444,6 +453,9 @@ label.valutare=valutare
 label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
+label.valutazione_commissione=Valutazione Commissione
+label.valutazione_commissione_ECM=Valutazione Commissione ECM
+label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_non_date=Valutazione non date (consecutivamente)
@@ -458,7 +470,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
-label.visualizzazione_seduta=Visualizzazione dati della Seduta
+label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
@@ -495,6 +507,7 @@ message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
+message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
@@ -511,3 +524,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.blocca_seduta=Blocca Seduta
+message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
