--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -50,7 +50,10 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
+label.abilita_campi=Abilita campi
 label.abilita_id_editabili=Abilita campi editabili
+label.abilita_modifica_campi=Abilita modifica ai campi
+label.abilita_modifica_campi_evento=Abilita modifica ai campi dell''evento {0}
 label.abilitato=Abilitato
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
@@ -222,6 +225,7 @@ label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
+label.invia_richiesta_integrazione=Invia Richiesta Integrazione
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.istruzioni_psw=La password deve essere composta da minimo 8 e massimo 12 caratteri, deve inoltre contenere almeno un numero e una lettera
 label.italiana=Italiana
@@ -243,7 +247,9 @@ label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
+label.modifica_comitato=Inserimento/rimozione di componenti
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
+label.modifica_eventi=Inserimento/rimozione di eventi
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
@@ -373,6 +379,7 @@ label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
 label.sostituisci=Sostituisci
+label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
@@ -421,6 +428,7 @@ label.visualizzazione=Visualizzazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
+message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
@@ -433,7 +441,6 @@ message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
-message.evento_salvato=L'evento è stato salvato con successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
